# hol_club

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_drop_unused_user_columns.py  0003_drop_user_language.py  0004_rename_intent_to_temperature.py  0005_add_partner_commission_percent.py  0006_drop_events_attendance_code.py  0007_add_private_chat_invite_link.py  0008_add_events_ticket_url.py  0009_add_profile_nudges.py  0010_add_event_registration_payment_proof.py  0011_remove_profile_and_adv_stats.py  0012_remove_events_ticket_url.py  0013_rm_partner_role_requests.py  0014_user_role_admin_user.py  0015_add_event_commission_stats.py  0016_add_event_publish_target.py  0017_remove_free_event_fields.py  0018_make_event_datetime_timezone_aware.py  0019_update_private_chat_delete_at_24h.py  0020_add_event_registration_reminder_sent_at.py  0254994d22c1_add_users_table.py  1c7b1c2f4a77_add_event_registration_paid_flag.py  2f9c8d1a7b3e_add_adv_stats_table.py  3a1b2c4d5e6f_rename_event_registrations_to_interesting.py  4a6f1c2b7f9a_add_events_fingerprint.py  4b0c1d2e3f4a_drop_adv_fields_from_event_interesting.py  4d87d15135bd_add_users_gender_age_group.py  56fe0e2e5167_add_users_gender_age_group.py  5c6d7e8f9a0b_update_adv_stats_counts.py  6b9c7f4f8bda_add_partner_requests_and_partner_role.py  (+12 more)
config/: config.py  settings.toml
scripts/: auth_telethon.py  backfill_event_interesting_usernames.py  backfill_users_usernames.py  partner_notify.py  request_general_registration.py
(+73 files in other folders)
