[tool.poetry]
name = "hol_club"
version = "0.1.0"
description = "Event bot for @hol_club channel"
authors = ["margleb <margleb.dm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
nats-py = "^2.8.0"
ormsgpack = "^1.5.0"
aiogram-dialog = "^2.1.0"
fluentogram = "^1.1.7"
redis = "^5.0.7"
alembic = "^1.13.2"
dynaconf = "^3.2.6"
psycopg = "^3.2.1"
sqlalchemy = "^2.0.32"
telethon = "^1.36.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
